# Rflow

./: Cargo.toml
configs/: ip_db_daily.toml  log4rs.yaml  run_config.toml
ip_db_daily/: echo_every_minute.toml  ip_db_daily.toml
job_configs/: echo_every_minute.toml  echo_every_minute_2.toml
pythons/: send_notif.py
src/: command_options.rs  main.rs
src/croner/: mod.rs
src/job/: mod.rs
src/notifier/: mod.rs
src/task/: mod.rs
