[package]
name = "rflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
execute = "0.2.13"
failure = "0.1.8"
log = "0.4.21"
log4rs = "1.3.0"
md5 = "0.7.0"
psutil = "3.3.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json5 = "0.1.0"
structopt = "0.3.26"
tokio = { version = "1.36.0", features = ["full"] }
tokio-cron-scheduler = "0.10.0"
toml = "0.8.12"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
